--- a/conversational-ui/package.json
+++ b/conversational-ui/package.json
@@ -28,8 +28,9 @@
       "@smithy/config-resolver": ">=4.4.0",
       "body-parser": ">=2.2.1",
       "esbuild": ">=0.25.0",
+      "fast-xml-parser": ">=5.3.4",
       "glob": ">=10.5.0",
-      "hono": ">=4.11.4",
+      "hono": ">=4.11.7",
       "js-yaml": ">=4.1.1",
       "lodash-es": ">=4.17.23",
       "mdast-util-to-hast": ">=13.2.1",
@@ -53,7 +54,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.1",
-    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "@mozilla/readability": "^0.6.0",
     "@opentelemetry/api": "^1.9.0",
     "@primer/react": "^38.7.1",
@@ -87,7 +88,7 @@
     "lucide-react": "^0.477.0",
     "mermaid": "^11.10.0",
     "nanoid": "^5.1.5",
-    "next": "15.4.10",
+    "next": "15.5.10",
     "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.3.0",
     "openai": "^4.104.0",
@@ -140,7 +141,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.32.0",
-    "eslint-config-next": "15.4.10",
+    "eslint-config-next": "15.5.10",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-tailwindcss": "^3.18.2",
