fix(blog): add fast-xml-parser override for security 🛡️
Override fast-xml-parser to >=5.3.4 to fix RangeError DoS vulnerability

--- a/blog/package.json
+++ b/blog/package.json
@@ -2,6 +2,11 @@
     "name": "blog",
     "type": "module",
     "version": "1.0.0",
+    "pnpm": {
+        "overrides": {
+            "fast-xml-parser": ">=5.3.4"
+        }
+    },
     "scripts": {
         "dev": "astro dev",
         "start": "astro dev",
